[add] throw logic